src/Aspire.Dashboard/Components/Dialogs/TextVisualizerDialog.razor.css
::deep .text-visualizer-line-number {
    min-width: 33px;
}

::deep .highlight-line {
    width: 100%;
    background: transparent;
}

.text-visualizer-container ::deep.button-container {
    display: flex;
    width: 100%;
    margin-top: auto;
}

.text-visualizer-container ::deep.text-visualizer-unmask-content {
    margin-left: 0;
}

.text-visualizer-container ::deep.button-container-right {
    display: flex;
    gap: 8px;
    margin-left: auto;
}

.text-visualizer-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    min-height: 120px;
}

.text-visualizer-container ::deep.log-overflow {
    max-height: 60vh;
    margin-bottom: 16px;
}

.markdown-content {
    max-height: 60vh;
    overflow-y: auto;
    margin-bottom: 16px;
}

